@@ -1,3 +1,7 @@
+2002-06-30  Mark Mitchell  <mark@codesourcery.com>
+
+	* compiler.py (GPP.GetExecutableName): Remove.
+
 2002-06-19  Mark Mitchell  <mark@codesourcery.com>
 
 	* compiler.py (SourcePosition.__init__): Remove incorrect
